--- a/asset/sass/layout/_header.scss
+++ b/asset/sass/layout/_header.scss
@@ -92,11 +92,7 @@
 
 				h1 {
 					left: 1em;
-					font-size: 0.8em;
-
-					span {
-						display: none;
-					}
+					font-size: 0.9em;
 				}
 
 				.mobile {
